# hw-tally

./: .gitignore  README.md  hw-tally.cabal  project.sh
app/: Main.hs
app/App/: Commands.hs
app/App/Commands/: Run.hs  Types.hs
src/HaskellWorks/: Tally.hs
src/HaskellWorks/Tally/: Json.hs  Type.hs
src/HaskellWorks/Tally/IO/: ByteString.hs
test/HaskellWorks/: TallySpec.hs
