cabal-version: 1.12
name: hw-tally
version: 1.0.0.0
license: BSD3
license-file: LICENSE
copyright: 2018 John Ky
maintainer: newhoggy@gmail.com
author: John Ky
homepage: https://github.com/haskell-works/hw-tally#readme
bug-reports: https://github.com/haskell-works/hw-tally/issues
synopsis: Library for counting votes
description:
    Please see README.md
category: Network
build-type: Simple
extra-source-files:
    README.md

source-repository head
    type: git
    location: https://github.com/haskell-works/hw-tally

library
    exposed-modules:
      HaskellWorks.Tally
      HaskellWorks.Tally.Type
    hs-source-dirs: src
    other-modules:
        Paths_hw_tally
    default-language: Haskell2010
    build-depends:
        base            >= 4            && < 4.13
      , aeson
      , containers
      , directory
      , generic-lens    >= 0.5.1.0      && < 1.2
      , text            >= 1.2.2.2      && < 1.3
      , vector

executable hw-tally
  main-is: Main.hs
  other-modules:
      App.Commands
      App.Commands.Run
      App.Commands.Types
      Paths_hw_tally
  hs-source-dirs:
      app
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base                  >= 4        && < 5
    , aeson
    , bytestring
    , generic-lens
    , hw-tally
    , lens
    , optparse-applicative  >= 0.14     && < 0.15
    , text
    , vector                >= 0.12     && < 0.13
  default-language: Haskell2010

test-suite hw-tally-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: test
    other-modules:
        HaskellWorks.TallySpec
        Paths_hw_tally
    default-language: Haskell2010
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base              >= 4          && < 4.13
      , generic-lens
      , hedgehog          >= 0.5.3      && < 0.7
      , hspec             >= 2.4.4      && < 2.6
      , hw-hspec-hedgehog >= 0.1.0.2    && < 0.2
      , hw-tally
      , text
